[package]
name = "nali"
version = "0.1.1"
edition = "2021"
license = "MIT"
keywords = ["nali", "nali-rs", "geoip"]
categories = ["command-line-utilities"]
repository = "https://github.com/xxxbrian/nali-rs"
description = "A command-line tool that enriches IP addresses with GeoIP information, enhancing network diagnostics with geographical context."

[dependencies]
colored = "2.1.0"
dirs = "5.0.1"
lazy_static = "1.5.0"
maxminddb = "0.24.0"
regex = "1.11.1"
sys-locale = "0.3.1"

[profile.release]
opt-level = 3
